--- a/config/test-steve/tanzu-java-web-app-test/delivery.yml
+++ b/config/test-steve/tanzu-java-web-app-test/delivery.yml
@@ -11,7 +11,7 @@ metadata:
     apps.tanzu.vmware.com/auto-configure-actuators: "true"
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
-    developer: tested
+    developer: success
     app.kubernetes.io/component: run
     carto.run/workload-name: tanzu-java-web-app-test
 spec:
