--- a/config/test-steve/tanzu-java-web-app-test/delivery.yml
+++ b/config/test-steve/tanzu-java-web-app-test/delivery.yml
@@ -11,7 +11,7 @@ metadata:
     apps.tanzu.vmware.com/auto-configure-actuators: "true"
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
-    developer: tested
+    developer: success
     app.kubernetes.io/component: run
     carto.run/workload-name: tanzu-java-web-app-test
 spec:
@@ -41,7 +41,7 @@ spec:
         apps.tanzu.vmware.com/workload-type: web
         carto.run/workload-name: tanzu-java-web-app-test
         conventions.carto.run/framework: spring-boot
-        developer: tested
+        developer: success
         tanzu.app.live.view: "true"
         tanzu.app.live.view.application.actuator.path: actuator
         tanzu.app.live.view.application.actuator.port: "8081"
