--- a/config/dev-steve/tanzu-java-web-app/delivery.yml
+++ b/config/dev-steve/tanzu-java-web-app/delivery.yml
@@ -12,6 +12,7 @@ metadata:
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: server
     my.label: steve.gitops
+    mylabel: buddy
     trigger: "3"
     app.kubernetes.io/component: run
     carto.run/workload-name: tanzu-java-web-app
@@ -99,6 +100,7 @@ metadata:
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: server
     my.label: steve.gitops
+    mylabel: buddy
     trigger: "3"
     app.kubernetes.io/component: run
     carto.run/workload-name: tanzu-java-web-app
